<resources>
    <string name="app_name">UngDungChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">725358954796-qekqbd0thcgqls4kvinc3rv5tr0de2bj.apps.googleusercontent.com</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="need_new_account">Bạn cần tạo tài khoản mới?</string>
    <string name="or_login_using_your">Hoặc đăng nhập bằng</string>
    <string name="phone">ĐIỆN THOẠI</string>
    <string name="verify">Nhập mã xác nhận</string>
    <string name="send_verify">Gửi mã xác nhận</string>
    <string name="send_verify_again">Xác nhận</string>
    <string name="text_phone">Nhập số điện thoại</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="find_friends">Tìm bạn bè</string>
    <string name="create_groups">Tạo nhóm</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="username">Tên người dùng</string>
    <string name="status_profile">Trạng thái hồ sơ</string>
    <string name="update">CẬP NHẬT</string>
    <string name="user_status">Trạng thái</string>
    <string name="google">Google</string>
    <string name="forgotpassword">Quên mật khẩu</string>
    <string name="resetpw">Xác nhận</string>
    <string name="groupname">Tên nhóm</string>
    <string name="changebackground">ĐỔI HÌNH NỀN</string>


</resources>