<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Activity.SettingActivity">
    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/setting_toolbar"
        >
    </include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_account_circle_24"
        app:civ_border_color="@color/colorPrimary"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        app:civ_border_width="2dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:drawableStart="@drawable/baseline_account_box_24"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:drawableStart="@drawable/baseline_edit_document_24"
            android:hint="@string/status_profile"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_setting_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/update"
        />

</LinearLayout>